# led-api

./: Cargo.toml  README.md  config.toml  generate_service_file.sh
src/: colors.rs  leds.rs  main.rs  sprites.rs  tests.rs
static/: index.html  style.css
static/pkg/: led_control.js  led_control_bg.wasm
wasm/: Cargo.toml
wasm/src/: lib.rs
