[package]
name = "led-control"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-utils = { version = "0.1", features = ["serde"] }

[dependencies.gloo-events]
version = "0.1"

[dependencies.gloo-timers]
version = "0.2"
features = ["futures"]

[dependencies.wasm-bindgen]
version = "^0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CssStyleDeclaration",
  "SvgElement",
  "HtmlCollection",
  "HtmlInputElement",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "MouseEvent",
  "HtmlTableElement",
  "SvgElement",
  "HtmlSelectElement",
  "HtmlOptionsCollection",
  "console",
  "Location",
  "HtmlOptionElement",
]
